// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout calculateLayout empty flow 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with decision with one element on left branch 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "h": 336,
      "joinOffsetY": 240,
      "offsetX": 220,
      "w": 440,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "h": 240,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": -132,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 176,
      "x": 132,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-left-head-guid": Object {
    "layout": Object {
      "h": 96,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 144,
    },
    "prevLayout": undefined,
  },
  "end-guid": Object {
    "layout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 456,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "h": 456,
      "joinOffsetY": 0,
      "offsetX": 220,
      "w": 440,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with empty decision 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "h": 216,
      "joinOffsetY": 120,
      "offsetX": 176,
      "w": 352,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 176,
      "x": -88,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 176,
      "x": 88,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 336,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "h": 336,
      "joinOffsetY": 0,
      "offsetX": 176,
      "w": 352,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with empty decision with 3 branches 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "h": 216,
      "joinOffsetY": 120,
      "offsetX": 264,
      "w": 528,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 176,
      "x": -176,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 176,
      "x": 176,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 336,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "h": 336,
      "joinOffsetY": 0,
      "offsetX": 264,
      "w": 528,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with empty loop 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 360,
    },
    "prevLayout": undefined,
  },
  "loop-guid": Object {
    "layout": Object {
      "h": 240,
      "joinOffsetY": 144,
      "offsetX": 148,
      "w": 296,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "loop-guid:0": Object {
    "layout": Object {
      "h": 144,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "root:0": Object {
    "layout": Object {
      "h": 360,
      "joinOffsetY": 0,
      "offsetX": 148,
      "w": 324,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with two elements with fault branches 1`] = `
Object {
  "action-element-one": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "action-element-one:-1": Object {
    "layout": Object {
      "h": 216,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 528,
      "y": 144,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "action-element-two": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "action-element-two:-1": Object {
    "layout": Object {
      "h": 216,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 264,
      "y": 264,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 360,
    },
    "prevLayout": undefined,
  },
  "fault-branch-head-guid-one": Object {
    "layout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "fault-branch-head-guid-two": Object {
    "layout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "h": 480,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 792,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "h": 0,
      "joinOffsetY": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "h": 120,
      "joinOffsetY": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;
